# DesignCampaign

./: .gitignore  CLAUDE.MD  README.md  pyproject.toml
src/: __init__.py  main.py
src/config/: __init__.py  color_schemes.py  settings.py  theme_manager.py  user_config.py
src/models/: __init__.py  alignment.py  grouping.py  interface.py  metrics.py  metrics_store.py  protein.py
src/ui/: __init__.py  boltz_import_dialog.py  collapsible_group.py  comparison_panel.py  file_list.py  main_window.py  metrics_table.py  plot_panel.py  selection_panel.py  sequence_viewer.py  viewer.py
src/ui/dialogs/: __init__.py  target_dialog.py
src/utils/: __init__.py  file_utils.py
tests/: __init__.py  test_color_schemes.py  test_file_utils.py  test_grouping.py  test_interface.py  test_metrics.py  test_metrics_store.py  test_protein.py  test_user_config.py
