[project]
name = "design-campaign"
version = "0.1.0"
description = "A protein structure viewer for design campaigns"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pyqt6>=6.6.0",
    "pyqt6-webengine>=6.6.0",
    "biotite>=1.0.0",
    "numpy>=1.24.0",
    "pyqtgraph>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
design-campaign = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
